# RuView

./: CHANGELOG.md  README.md  privacy.txt
.github/workflows/: firmware-qemu.yml
docs/: user-guide.md
docs/adr/: ADR-057-desktop-training-ruvector-integration.md  ADR-066-esp32-swarm-seed-coordinator.md
examples/: ruview_live.py
examples/happiness-vector/: happiness_vector_schema.json  provision_swarm.sh  seed_query.py
firmware/esp32-csi-node/: provision.py  sdkconfig.coverage
firmware/esp32-csi-node/main/: CMakeLists.txt  main.c  mock_csi.c  mock_csi.h  nvs_config.c  nvs_config.h  swarm_bridge.c  swarm_bridge.h
firmware/esp32-csi-node/test/: Makefile
firmware/esp32-hello-world/: CMakeLists.txt  sdkconfig.defaults
firmware/esp32-hello-world/main/: main.c
pose-fusion/js/: main.js
rust-port/wifi-densepose-rs/crates/ruv-neural/: Cargo.toml  SECURITY_REVIEW.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-cli/: Cargo.toml
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-cli/src/: main.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-cli/src/commands/: analyze.rs  export.rs  info.rs  mincut.rs  mod.rs  pipeline.rs  simulate.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-core/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-core/src/: lib.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-decoder/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-decoder/src/: clinical.rs  pipeline.rs  transition_decoder.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-embed/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-embed/src/: combined.rs  distance.rs  lib.rs  node2vec.rs  rvf_export.rs  spectral_embed.rs  temporal.rs  topology_embed.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-esp32/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-esp32/src/: lib.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-graph/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-graph/src/: constructor.rs  dynamics.rs  lib.rs  metrics.rs  petgraph_bridge.rs  spectral.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-memory/src/: persistence.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-mincut/src/: benchmark.rs  coherence.rs  dynamic.rs  multiway.rs  normalized.rs  spectral_cut.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-sensor/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-sensor/src/: calibration.rs  eeg.rs  lib.rs  nv_diamond.rs  opm.rs  quality.rs  simulator.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-signal/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-signal/src/: artifact.rs  connectivity.rs  filter.rs  hilbert.rs  preprocessing.rs  spectral.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-viz/src/: animation.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-wasm/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-wasm/src/: graph_wasm.rs  lib.rs  streaming.rs  viz_data.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/tests/: integration.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-wasm-edge/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-wasm-edge/src/: exo_happiness_score.rs  lib.rs
scripts/: generate_nvs_matrix.py  inject_fault.py  qemu-chaos-test.sh  qemu-mesh-test.sh  qemu-snapshot-test.sh  qemu_swarm.py  validate_qemu_output.py
ui/: pose-fusion.html
ui/pose-fusion/css/: style.css
ui/pose-fusion/js/: canvas-renderer.js  cnn-embedder.js  fusion-engine.js  main.js  pose-decoder.js
