[package]
name = "ruv-neural-decoder"
description = "rUv Neural — Cognitive state classification and BCI decoding from neural topology embeddings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
wasm = []

[dependencies]
ruv-neural-core = { workspace = true }
# ruv-neural-embed and ruv-neural-memory are available for future integration
# but not currently required for core decoder functionality
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
